update eraser line button and change text color

--- a/styles/color/color-default.css
+++ b/styles/color/color-default.css
@@ -211,8 +211,8 @@
 }
 
 .purchase-btn::before {
-  background: #6a11cb;
-  background: rgb(239, 90, 38);
+  /* background: #6a11cb; */
+  /* background: rgb(239, 90, 38); */
 }
 
 .personal-price-package .purchase-btn {
